...
enum class LinkSourceType { Habit, Task, Subtask, Workout, Exercise, Measurement, Track }

enum class LinkSourceMeasurement {
    NumericValue,
    Success,
    Completion,
    Count,
    Duration,
    Volume,
    EstimatedOneRepMax,
    MaxWeight,
    Distance,
    Repetitions,
...
